# ChangeLog for gnome-base/gnome-settings-daemon
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-settings-daemon/ChangeLog,v 1.29 2009/04/28 11:48:44 armin76 Exp $

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-settings-daemon-2.24.1-r1.ebuild:
  arm/sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org>
  gnome-settings-daemon-2.24.1-r1:
  Stable for HPPA (bug #260063).

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-settings-daemon-2.24.1-r1.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-settings-daemon-2.24.1-r1.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org>
  gnome-settings-daemon-2.24.1-r1.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-settings-daemon-2.24.1-r1.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org>
  gnome-settings-daemon-2.24.1-r1.ebuild:
  Marking gnome-settings-daemon-2.24.1-r1 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org>
  gnome-settings-daemon-2.24.1-r1.ebuild:
  Marking gnome-settings-daemon-2.24.1-r1 ppc64 stable for bug 260063

  04 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-settings-daemon-2.24.0.ebuild,
  -gnome-settings-daemon-2.24.1.ebuild:
  Clean up old revisions.

  04 Dec 2008; Rémi Cardona <remi@gentoo.org>
  files/gnome-settings-daemon-2.24.1-check-for-server-side-XInput.patch:
  upstream proposed a different patch, let's use that instead

*gnome-settings-daemon-2.24.1-r1 (02 Dec 2008)

  02 Dec 2008; Rémi Cardona <remi@gentoo.org>
  +files/gnome-settings-daemon-2.24.1-check-for-server-side-XInput.patch,
  +gnome-settings-daemon-2.24.1-r1.ebuild:
  add patch to check for server-side XInput support (Gnome bug #562977)

*gnome-settings-daemon-2.24.1 (29 Nov 2008)

  29 Nov 2008; Gilles Dartiguelongue <eva@gentoo.org>